subtest-impl/tests/snapshots/expand_impl__snapshots@two_subtests.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/two_subtests.rs
---
#[test]
fn two_subtests() {
    let i = 1;
}
mod two_subtests_subtests {
    use super::*;
    #[test]
    fn add() {
        #[allow(unused_variables)]
        let i = 1;
        let i = i + 1;
        assert_eq!(i, 2);
    }
    #[test]
    fn subtract() {
        #[allow(unused_variables)]
        let i = 1;
        let i = i - 1;
        assert_eq!(i, 0);
    }
}
