subtest-impl/tests/snapshots/expand_impl__snapshots@uninherited_test_attrs.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/uninherited_test_attrs.rs
---
#[test]
#[ignore = "my reason"]
#[should_panic(expected = "my failure")]
fn parent() {}
mod parent_subtests {
    use super::*;
    #[test]
    fn child() {}
    mod child_subtests {
        use super::*;
        #[test]
        fn grandchild() {}
    }
}
