subtest-impl/tests/snapshots/expand_impl__snapshots@unused_assignments_in_subtest.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/unused_assignments_in_subtest.rs
---
#[test]
fn values_are_assigned() {
    let deferred;
    deferred = "a";
    let nested;
    {
        nested = "b";
    }
    let branched;
    if deferred == "a" {
        branched = "c";
    } else {
        branched = "d";
    }
    let mut counter = 0;
    counter += 1;
    assert_eq!((deferred, nested, branched, counter), ("a", "b", "c", 1));
}
mod values_are_assigned_subtests {
    use super::*;
    #[test]
    fn subtest_reads_none_of_them() {
        let deferred;
        deferred = "a";
        let nested;
        {
            nested = "b";
        }
        let branched;
        if deferred == "a" {
            branched = "c";
        } else {
            branched = "d";
        }
        let mut counter = 0;
        counter += 1;
        assert_eq!(1 + 1, 2);
    }
}
