subtest-impl/tests/snapshots/expand_impl__snapshots@unused_mut_in_subtest_parameter.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/unused_mut_in_subtest_parameter.rs
---
#[rstest]
#[case(1)]
fn value_can_be_incremented(#[case] mut value: u32) {
    value += 1;
    assert!(value > 1);
}
mod value_can_be_incremented_subtests {
    use super::*;
    #[rstest]
    #[case(1)]
    fn value_is_positive(#[case] mut value: u32) {
        assert!(value > 0);
    }
}
