subtest-impl/tests/snapshots/expand_impl__snapshots@unused_variables_in_subtest.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/unused_variables_in_subtest.rs
---
#[test]
fn value_can_be_sent() {
    let (sender, receiver) = std::sync::mpsc::channel();
    sender.send("Hello!").unwrap();
    let value = receiver.recv().unwrap();
    assert_eq!(value, "Hello!");
}
mod value_can_be_sent_subtests {
    use super::*;
    #[test]
    fn another_value_can_be_sent() {
        let (sender, receiver) = std::sync::mpsc::channel();
        sender.send("Hello!").unwrap();
        sender.send("Hello again!").unwrap();
    }
}
